[workspace]
members = [
  "bin/common",
  "bin/unprll-miner",
  "bin/unprll-wallet-rpc",
  "bin/unprlld",
  "blockchain",
  "blockchain_db",
  "coin_specific",
  "common",
  "core",
  "crypto",
  "ensure_macro",
  "p2p",
  "ringct",
  "rpc",
  "transaction_util",
  "varint",
  "wallet"
]

# Enable optimizations on the crypto crate to speed up RNJC testing
[profile.dev.package.crypto]
opt-level = 3

[profile.test.package.crypto]
opt-level = 3