[package]
name = "async_jsonrpc_client"
version = "0.1.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
futures = "0.1"
reqwest = { version = "0.9", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
