[package]
name = "blockchain"
version = "1.0.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

[dependencies]
bincode = "1.1"
blockchain_db = { path = "../blockchain_db" }
common = { path = "../common" }
crypto = { path = "../crypto" }
failure = "0.1"
futures = "0.3"
hex = "0.3"
log = "0.4"
ringct = { path = "../ringct" }
structopt = "0.2"
txpool = { path = "../txpool" }