[package]
name = "blockchain_db"
version = "1.0.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

[dependencies]
bincode = "1.1"
common = { path = "../common" }
crypto = { path = "../crypto" }
hex = "0.3"
log = "0.4"
rkv = "0.9"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2"
thiserror = "1.0"