[package]
name = "coin_specific"
version = "0.1.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
cryptonote_core = { path = "../core" }
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
wallet = { path = "../wallet" }
