[package]
name = "common"
version = "1.0.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
bincode = "1.1"
crypto = { path = "../crypto" }
digest = "0.8"
hex = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2"
