[package]
name = "common"
version = "1.0.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
bincode = "1.1"
bincode_epee = { path = "../bincode_epee" }
crypto = { path = "../crypto" }
digest = "0.8"
failure = "0.1"
hex = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2"
