[package]
name = "common"
version = "1.0.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

[dependencies]
bincode = "1.1"
byteorder = "1.3"
crypto = { path = "../crypto" }
digest = "0.8"
directories = "2.0"
failure = "0.1"
hex = "0.3"
log = "0.4"
ringct = { path = "../ringct" }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2"
varint = { path = "../varint" }
