[package]
name = "crypto"
version = "1.0.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

[dependencies]
arrayref = "0.3"
blake-hash = "0.3"
byteorder = "1.3"
c2-chacha = "0.1"
groestl-aesni = "0.2"
hex = "0.3"
jh-x86_64 = "0.2"
keccak = "0.1" # For keccakf
skein-hash = "0.3"
sha3 = "0.8"
