[package]
name = "crypto"
version = "1.0.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
arrayref = "0.3"
blake-hash = "0.3"
bincode = "1.1"
byteorder = "1.3"
c2-chacha = "0.1"
clear_on_drop = "0.2.3"
curve25519-dalek = { version = "2", features = ["serde"] }
digest = "0.8"
generic-array = { version = "0.12", features = ["serde"] }
groestl-aesni = "0.2"
hex = "0.3"
jh-x86_64 = "0.2"
keccak = "0.1" # For keccakf
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
skein-hash = "0.3"
sha3 = "0.8"

[build-dependencies]
cc = "1.0"