[package]
name = "p2p"
version = "0.1.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

[dependencies]
bincode = "1.1"
crypto = { path = "../crypto" }
common = { path = "../common" }
cryptonote_core = { path = "../core" }
futures = "0.1"
libp2p = "0.13"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2"
tokio = "0.1"
