[package]
name = "p2p"
version = "0.1.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

[dependencies]
bincode = "1.1"
crypto = { path = "../crypto" }
common = { path = "../common" }
cryptonote_core = { path = "../core" }
failure = "0.1"
futures = "0.3"
libp2p = { version = "0.17", default-features = false, features = ["tcp", "dns", "secio", "mplex", "websocket", "yamux"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2"
tokio = { version = "0.2", features = ["full"] }
