[package]
name = "p2p"
version = "0.1.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bincode = "1.1"
crypto = { path = "../crypto" }
common = { path = "../common" }
cryptonote_core = { path = "../core" }
futures = "0.3"
libp2p = { version = "0.19", default-features = false, features = ["tcp-async-std", "dns", "secio", "mplex", "websocket", "yamux"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2"
tokio = { version = "0.2", features = ["full"] }
