[package]
name = "ringct"
version = "0.1.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

[dependencies]
bincode = "1.1"
crypto = { path = "../crypto" }
failure = "0.1"
hex = "0.3"
itertools = "0.8"
lazy_static = "1.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
varint = { path = "../varint" }
