[package]
name = "rpc"
version = "0.1.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

[dependencies]
bincode = "1.1"
common = { path = "../common" }
cryptonote_core = { path = "../core" }
futures = "0.1"
hex = "0.3"
hyper = "0.12"
jsonrpc-v2 = { version = "0.3", default-features = false, features = ["easy_errors", "hyper"]}
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = "0.1"
