[package]
name = "rpc"
version = "0.1.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

[dependencies]
bincode = "1.1"
bincode_epee = { path = "../bincode_epee" }
common = { path = "../common" }
crypto = { path = "../crypto" }
cryptonote_core = { path = "../core" }
failure = "0.1"
futures = "0.3"
hex = "0.3"
hyper = "0.13"
jsonrpsee = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2"
tokio = { version = "0.2", features = ["full"] }
