[package]
name = "transaction_util"
version = "0.1.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58-monero = "0.1"
byteorder = "1.3"
crypto = { path = "../crypto" }
common = { path = "../common" }
ensure_macro = { path = "../ensure_macro" }
rand = "0.7"
ringct = { path = "../ringct" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
varint = { path = "../varint" }

[dev-dependencies]
hex = "0.3"
