[package]
name = "wallet"
version = "0.1.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

[dependencies]
bincode = "1.1"
bincode_epee = { path = "../bincode_epee" }
base58-monero = "0.1"
crypto = { path = "../crypto" }
failure = "0.1"
hex = "0.3"
serde = { version = "1.0", features = ["derive"] }
