[package]
name = "wallet"
version = "0.1.0"
authors = ["Christopher Tobias <ctobias@gmx.com>"]
edition = "2018"

[dependencies]
bincode = "1.1"
byteorder = "1.3"
base58-monero = "0.1"
common = { path = "../common" }
crypto = { path = "../crypto" }
failure = "0.1"
hex = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
transaction_util = { path = "../transaction_util" }
